# HomemadeDrive

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
assets/: tailwind.css  video-compress.js
src/: app.rs  main.rs  server.rs
src/components/: file_list.rs  gallery.rs  header.rs  lightbox.rs  mod.rs  status.rs  upload_zone.rs
src/models/: i18n.rs  mod.rs  upload_state.rs
src/services/: mod.rs  upload_services.rs  video_compression.rs
